feat: middleware jwtValidate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FF-Solutions-Backend",
+  "name": "Insightt Backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.4.6",
-    "aws-sdk": "^2.969.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
